<resources>
    <string name="app_name">LearnMe</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id neque lorem. Praesent luctus eros ac fermentum hendrerit. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras ac lacus porttitor, tincidunt metus euismod, euismod massa. Vestibulum luctus ex nisl, eu porttitor mauris consectetur vel. Vivamus sit amet sem aliquet, fermentum quam eget, vulputate odio. Quisque nec porttitor magna.</string>

    <!-- For Login and Sign Up -->
    <string name="new_account">New \nAccount</string>
    <string name="login_title">Log In</string>
    <string name="index_page_1">1/2 \nSteps</string>
    <string name="index_page_2">2/2 \nSteps</string>
    <string name="upload_profile">Upload a Profile Picture \n(Optional)</string>
    <string name="input_username">Username</string>
    <string name="input_password">Password</string>
    <string name="input_email">Email</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>

    <!-- For Navigation Bottom -->
    <string name="action_home">Home</string>
    <string name="action_reward">Reward</string>
    <string name="action_shop">Shop</string>
    <string name="action_quiz">Quiz</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_comment">Write Comment</string>

    <!-- For fragment_shop -->
    <string name="fs_poin">Point</string>
    <string name="fs_hot_item">Popular Item</string>
    <string name="fs_swipe_more">Swipe for see more item</string>
    <string name="fs_avatar">Avatar</string>
    <string name="fs_avatar_more">Get your favorite avatar</string>
    <string name="fs_quiz">Quiz</string>
    <string name="fs_quiz_more">Get your quiz, challenge your knowledge</string>
    <string name="fs_buy">Confirm</string>
    <string name="fs_success">Back</string>
    <string name="fs_profile">Check Item</string>

    <!-- Homepage -->
    <string name="hp_trending">Trendings</string>
    <string name="hp_category">Category</string>
    <string name="hp_promotion">Promotions</string>
    <string name="search">Search</string>
    <string name="add_question">Ask Question</string>
    <string name="add_quiz">Take Quiz</string>
    <string name="search_keyword">Search Question By Keyword</string>
    <string name="search_keyword_comment">Search Answer By Keyword</string>
    <string name="title_activity_question_expand">QuestionExpand</string>
    <string name="profile_menu">Profile</string>
    <string name="about_menu">About</string>
    <string name="version_menu">V1.0 (BETA)</string>
    <string name="logout_menu">Log Out</string>
    <string name="language_menu">Language</string>
    <string name="close_menu">Close</string>
    <string name="apply">Apply</string>

    <!-- Question -->
    <string name="type_answear">Type an answer</string>
    <string name="answear">Answer</string>

    <!-- Edit Profile -->
    <string name="btn_edit">Confirm</string>
    <string name="et_username">Username</string>
    <string name="et_firstname">First Name</string>
    <string name="et_lastname">Last Name</string>
    <string name="et_address">Address</string>
    <string name="et_email">Email</string>
    <string name="et_phone">Phone Number</string>

    <!-- Change Password -->
    <string name="btn_change">Change</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm New Password</string>

    <!-- Forgot Password -->
    <string name="info_enter_email">Please Enter Your Identity</string>
    <string name="submit_forgot_pass">Submit</string>
    <string name="btn_move_login">BACK</string>
    <string name="message_email_send_info">Please check your email, to complete the process</string>
    <string name="message_email_send_title">Email has been send !</string>

    <string name="tag_prompt">Choose a tag</string>
    <string name="already_purchase">Item already purchased</string>

    <!-- Quiz -->
    <string name="attempt">Attempt allowed</string>
    <string name="unlimited">Unlimited</string>
    <string name="amount">Amount of Retrieval</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="congratulations">Congratulations</string>
    <string name="totalscore">Total Score</string>
    <string name="home">Home</string>
    <string name="gotpoint">You got</string>
    <string name="point">points</string>
    <string name="quiz_taken">Quiz Already Taken</string>

    <!-- Point Info -->
    <string name="title_info">Point Information</string>
    <string name="point_1">Ask question +10 point</string>
    <string name="point_2">Give comment to selected question +5 point</string>
    <string name="point_3">Take Quiz + up to 2 x quiz point</string>
    <string name="point_4">Sign Up +100 point</string>

    <!-- About -->
    <string name="about">I am an education mobile apps basically like forums, you can start a conversation by asking a question or give comment on an active question, simple like that? Yes, I am giving you a simple way of sharing and learning.
"But I want more than that" of course, you can challenge yourself by taking a free or paid quiz. You can learn everywhere and every time, school is not the only  way if you want to know more, "I have a question about an animal, can I ask this in LearnMe?" Yes absolutely you can, In LearnMe the main topic allowed is about science.</string>
    <string name="about_indo">
Saya adalah aplikasi mobile pendidikan yang pada dasarnya seperti forum, Anda dapat memulai percakapan dengan mengajukan pertanyaan atau memberikan komentar pada pertanyaan aktif, sederhana seperti itu? Ya, saya memberi Anda cara sederhana untuk berbagi dan belajar.
"Tapi saya ingin lebih dari itu" tentu saja, Anda bisa menantang diri sendiri dengan mengikuti kuis gratis atau berbayar. Anda dapat belajar di mana-mana dan setiap saat, sekolah bukan satu-satunya cara jika Anda ingin tahu lebih banyak, "Saya punya pertanyaan tentang binatang, dapatkah saya menanyakan hal ini di LearnMe?" Ya tentu saja Anda bisa, Di LearnMe topik utama yang diizinkan adalah tentang sains.</string>

</resources>
