<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailSuccess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/email_sent"/>
        <TextView
            android:id="@+id/txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_email_send_title"
            android:textSize="20sp"
            android:fontFamily="@font/proxima_nova"/>
        <TextView
            android:id="@+id/txt_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_email_send_info"
            android:textSize="15sp"
            android:fontFamily="@font/proxima_nova"/>
        <Button
            android:id="@+id/btn_move_login"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_gradient_style_2"
            android:text="@string/btn_move_login"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/proxima_nova" />
    </LinearLayout>

</RelativeLayout>