<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizResult"
    android:background="@drawable/background_result">

    <LinearLayout
        android:id="@+id/ll_score"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congratulations"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/proxima_nova"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/totalscore"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="@font/proxima_nova"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txt_my_score"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="90"
            android:textAllCaps="true"
            android:textSize="70sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_nova"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gotpoint"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="@font/proxima_nova"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/gotpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="@font/proxima_nova"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textAlignment="center"
                android:fontFamily="@font/proxima_nova"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll_score"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btn_homepage"
            android:layout_width="230dp"
            android:layout_height="65dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_gradient_style"
            android:text="@string/home"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/proxima_nova" />
    </LinearLayout>
</RelativeLayout>