<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:padding="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_enter_email"
            android:fontFamily="@font/proxima_nova"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputlayout_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <EditText
                android:id="@+id/et_username_input"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_person_blue_24dp"
                android:hint="@string/et_username"
                android:textAllCaps="false"
                android:fontFamily="@font/proxima_nova"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputlayout_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:id="@+id/et_email_input"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:hint="@string/et_email"
                android:textAllCaps="false"
                android:fontFamily="@font/proxima_nova"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit_forgot"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_gradient_style_2"
            android:text="@string/submit_forgot_pass"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>